Reorganização de diretorios e criação da section hero

--- a/assets/css/layout/_header.css
+++ b/assets/css/layout/_header.css
@@ -1,4 +1,6 @@
 /* Mobile First Approach */
+
+/* // inicio da definicão principal do header, como cores, tamanhos e layout */
 .header-main {
   display: flex;
   justify-content: center;
@@ -9,14 +11,21 @@
   width: 100%;
   text-align: center;
 }
+/* ## Fim da definicão principal do header, como cores, tamanhos e layout */
+
+/* // Inicio da estilização da logo */
 .logo {
   font-size: 2.5rem;
   color: var(--color-primary);
   font-family: var(--font-title);
 }
+/* ** logo-span tratase da parte decorativa da logo, responsavel por mudar a cor da parte final do texto */
 .logo-span {
   color: var(--color-aux);
 }
+/* ## Fim da estilização da logo */
+
+/* // Inicio da estilização da area de redes sociais e meios de contatos */
 .social-media {
   display: flex;
   justify-content: center;
@@ -24,25 +33,30 @@
   font-size: 2.5rem;
   gap: 1rem;
 }
+/* ** Inicio da pesonalização dos icones */
 .icon-header {
   color: var(--color-primary);
   cursor: pointer;
   padding: 1rem;
-  transition: 0.5s;
+  transition: color 0.5s, transform 0.5s;
 }
 .icon-header:hover {
   color: var(--color-aux);
-  transition: 0.5s;
-  rotate: -3deg;
+  transform: rotate(-5deg);
   font-size: 3rem;
 }
+/* ## Fim da estilização da area de redes sociais e meios de contatos */
 
 /* Breakpoints */
 @media (min-width: 576px) {
   /* Small devices (landscape phones) */
+
+  /* Ajuste da altura do header */
   .header-main {
     height: 10rem;
   }
+
+  /* Ajuste da posição e centralização do conteudo do header */
   .container-header {
     display: inline-flex;
     width: 90%;
@@ -50,13 +64,12 @@
     height: 100%;
     align-items: center;
   }
-  .logo {
-    margin-bottom: 0;
-  }
 }
 
 @media (min-width: 768px) {
   /* Medium devices (tablets) */
+
+  /* Ajuste da posição e centralização do conteudo do header */
   .container-header {
     width: 80%;
     margin: 0 auto;
@@ -65,8 +78,9 @@
 
 @media (min-width: 992px) {
   /* Large devices (desktops) */
+
+  /* Ajuste do tamanho da fonte da logo */
   .logo {
     font-size: 3rem;
   }
 }
-
