--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
-@import url(./reset.css);
-@import url(./variables.css);
-@import url(./_header.css);
+@import url(./base/_reset.css);
+@import url(./base/_variables.css);
+@import url(./layout/_grid.css);
+@import url(./layout/_header.css);
+@import url(./layout/_hero.css);
